fix contrast ratio

--- a/_sass/landing-page.scss
+++ b/_sass/landing-page.scss
@@ -1,65 +1,74 @@
 .hero {
-	color: #ffffff;
-	text-align: center;
-	height: 100vh;
-	min-height: 550px;
-	background-color: #00897b;
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: center center;
+  color: #ffffff;
+  text-align: center;
+  height: 100vh;
+  min-height: 550px;
+  background-color: #333;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  position: relative;
 
-	p {
-		color: #fff;
-		font-weight: 700;
-	}
+  &:before {
+    content: "";
+    background: rgba(0, 0, 0, 0.3);
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+  }
 
-	.inner-hero {
-		display: flex;
-		align-items: center;
-		height: 100%;
-	}
+  p {
+    color: #fff;
+    font-weight: 700;
+  }
 
-	.hero-text-container {
-		width: 600px;
-		text-align: left;
+  .inner-hero {
+    display: flex;
+    align-items: center;
+    height: 100%;
+    z-index: 1;
+  }
 
-		h1, h2, p, .button {
-			text-shadow: 1px 1px 1px rgba(0,0,0,.8);
-		}
-	}
+  .hero-text-container {
+    width: 600px;
+    text-align: left;
+  }
 
-	.hero-text-right {
-		position: absolute;
-		right: 0;
-	}
+  .hero-text-right {
+    position: absolute;
+    right: 0;
+  }
 }
 
 .image {
-	text-align: center;
+  text-align: center;
 }
 
 .bottom-cta {
-	text-align: center;
+  text-align: center;
 
-	h2 {
-		margin-bottom: 12px;
-	}
+  h2 {
+    margin-bottom: 12px;
+  }
 }
 
 @media #{$desktop} {
-	.flex {
-		@include flexbox;
-		align-items: center;
-		flex-direction: row;
+  .flex {
+    @include flexbox;
+    align-items: center;
+    flex-direction: row;
 
-		.text, .image {
-			-webkit-flex: 1;
-			flex: 1;
-			padding: 0 20px;
-		}
-	}
+    .text,
+    .image {
+      -webkit-flex: 1;
+      flex: 1;
+      padding: 0 20px;
+    }
+  }
 
-	.content section:nth-child(even) .flex {
-		flex-direction: row-reverse;
-	}
+  .content section:nth-child(even) .flex {
+    flex-direction: row-reverse;
+  }
 }
